# dputils

./: .pypirc  LICENSE  practice.ipynb  pyproject.toml  readme.md  requirements.txt  sample.docx  setup.py  test.py
.github/workflows/: python-publish.yml
docs/: _config.yml  files.md  index.md  scraper.md
dputils/: __init__.py  files.py  pyproject.toml  scrape.py  utills.py
dputils/dputils/: files.py  scrape.py
dputils/tests/: test_dputils.py
dputils_old/: Files.py  test_files.py
examples/: case.py  example.docx  practice.ipynb  sample.docx
poetry-demo/: pyproject.toml
tests/: test.py
