[tool.poetry]
name = "dputils"
version = "0.1.11"
description = "This library is utility library from digipodium"
authors = ["AkulS1008 <akulsingh0708@gmail.com>"]
maintainers = ["Zaid Kamil <xaidmetamorphos@gmail.com>"]
readme = "readme.md"
license = "MIT"

homepage = "https://github.com/digipodium/dputils"
repository = "https://github.com/digipodium/dputils"
documentation = "https://github.com/digipodium/dputils"

[tool.poetry.dependencies]
python = "^3.8"
docx2txt = "^0.8"
"pdfminer.six" = "^20220524"
fpdf2 = "^2.5.4"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
requests = "^2.27.1"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Topic :: Software Development :: Utility",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

keywords = ["file-handling", "web-scraping", "utility", "dputils", "digipodium"]