[tool.poetry]
name = "dputils"
version = "1.0.1"
description = "This library is utility library from digipodium"
authors = ["Team Digipodium", "Zaid Kamil <xaidmetamorphos@gmail.com>", "AkulS1008 <akulsingh0708@gmail.com>"]
maintainers = ["Zaid Kamil <xaidmetamorphos@gmail.com>"]
readme = "readme.md"
license = "MIT"

homepage = "https://digipodium.github.io/dputils/"
repository = "https://github.com/digipodium/dputils"
documentation = "https://digipodium.github.io/dputils/"

[tool.poetry.dependencies]
python = "^3.8"
docx2txt = "^0.8"
"pdfminer.six" = "^20220524"
fpdf2 = "^2.5.4"
bs4 = "^0.0.1"
requests = "^2.27.1"
python-docx = "^0.8.11"
httpx = {extras = ["http2"], version = "^0.25.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Topic :: Software Development :: Utility",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

keywords = ["file-handling", "web-scraping", "utility", "dputils", "digipodium", "bot", "crawlers", "scraper", "digipod"]