[tool.poetry]
name = "dputils"
version = "0.1.1"
description = "This library is utility library from digipodium"
authors = [{
    name = "Akul Singh",
    email = "akulsingh0708@gmail.com",
}]

[tool.poetry.dependencies]
python = "^3.9"
docx2txt = "^0.8"
"pdfminer.six" = "^20220524"
fpdf2 = "^2.5.4"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
requests = "^2.27.1"
PyPDF2 = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
readme = "README.rst"

[project.urls]
homepage = "https://github.com/digipodium/dputils"
repository = "https://github.com/digipodium/dputils"

test = ["pytest"]